[metadata]
name = luma.core
version = attr: luma.core.__version__
description = A component library to support SBC display drivers
long_description = file: README.rst, CONTRIBUTING.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = raspberry, orange, banana, pi, rpi, opi, sbc, oled, lcd, led, display, screen, spi, i2c, ftdi, usb
author = Richard Hull
author_email = richard.hull@destructuring-bind.org
url = https://github.com/rm-hull/luma.core
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.8, <4
install_requires =
    pillow>=9.2.0
    smbus2
    pyftdi
    cbor2
    RPI.GPIO; platform_system=="Linux"
    spidev; platform_system=="Linux"
tests_require =
    pytest
    pytest-cov
    pytest-timeout
    pytest-watch

[options.packages.find]
include = luma*

[options.extras_require]
docs =
    sphinx>=1.5.1
    sphinx-rtd-theme
qa =
    flake8
    rstcheck
test =
    pytest
    pytest-cov
    pytest-timeout
    pytest-watch

[bdist_wheel]
universal = 1

[flake8]
ignore = E121, E122, E124, E125, E127, E128, E241, E402, E501, E731, E722
exclude =
    .ropeproject,
    .tox,
    .eggs,
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    doc,
    build,
    dist

[aliases]
test=pytest
